Fix spacing for long titles and locations

--- a/app/assets/components/module_panel/_module_panel.sass
+++ b/app/assets/components/module_panel/_module_panel.sass
@@ -33,4 +33,5 @@
     min-height: 90px
   .panel-title
     min-height: 50px
+    font-size: 1rem
 
