--- a/app/assets/components/schedule_module/_schedule_module.sass
+++ b/app/assets/components/schedule_module/_schedule_module.sass
@@ -39,7 +39,7 @@
 .schedule-module-header
   position: relative
   padding: 1em 1em 1em 92px
-  height: 115px
+  height: 143px
   overflow: hidden
 
 .schedule-module-header a:hover
@@ -59,11 +59,11 @@
   +font-size(18)
 
 .schedule-module-footer
-  +font-size(16)
+  +font-size(14)
   position: relative
   background-color: #1c262e
   padding: 1em 1em 1em 92px
-  height: 72px
+  height: 94px
 
 .schedule-time
   @extend %sans-ultra-bold
